[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://simple_boot.gd" id="1"]

[node name="SimpleBoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BackgroundVideo" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
autoplay = true
volume = 0.0

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)
visible = false

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LogoContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 200)

[node name="LogoImage" type="TextureRect" parent="CenterContainer/VBoxContainer/LogoContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 150)
expand_mode = 1
stretch_mode = 5

[node name="LogoLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "DECKPORT"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Starting up..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 100.0
